prevent overflow scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overscroll-behavior: none;
 }
 
 a {
